2013-07-28  Eric Wolf  <eric@DobreDen>

	* VERSION 0.1007
	* added search by list

2013-07-25  Eric Wolf  <eric@DobreDen>

	* VERSION 0.1006
	* fixed javascript bug where uploads were not being set properly for set_foo property calls.
	* added YOTE_ROOT/lib directory, which is automatically in the classpath yote uses.
	* min width for javascript util edit boxes
	* fixed bug where fail and pass functions were not being called properly for property set calls.


2013-07-24  Eric Wolf  <eric@DobreDen>

	* VERSION 0.1005
	* update with documentation changes.
	* fixed the yote_classpath_updater.pl
	* fixed major bug in Yote::Obj that didn't mark new things as dirty

2013-07-24  Eric Wolf  <coyocanid@gmail.com>

	* Version 0.1004
	* The update that really wasn't

2013-07-15  Eric Wolf  <coyocanid@gmail.com>

	* Version 0.1003
	* Minor fix to Yote::MysqlIO - removed incorrect dependency

2013-07-09  Eric Wolf  <coyocanid@gmail.com>

	* Version 0.1002
	* This version has a faster multi processing for processing processes than the previous version.

2013-06-27  Eric Wolf  <coyocanid@gmail.com>

	* cleaned up useage printout
	* have the server try to retart if the port is not yet clear.

2013-06-19  Eric Wolf  <coyocanid@gmail.com>

	* VERSION 0.1000
	* Major changes. There are now two types of processes running : server and process
	* server processes field requests and either serve up web pages, or queue up requests for process processes to do. The server processes wait for the answer from the processing processes.
	* configuration file updates to include number of processes of both types to create

2013-06-12  Eric Wolf  <coyocanid@gmail.com>

	* VERSION 0.0996
	* added number of processes as a configuration value

2013-06-09  wolf  <coyocanid@gmail.com>

	* VERSION 0.0994
	* paginate updates. Now have paginate_list and paginate_hash to be more clear.

2013-06-03  Eric Wolf  <coyocanid@gmail.com>

	* VERSION 0.0993
	* Big changes under the hood.