@@ -16,17 +16,17 @@ lib/Yote/Cron.pm
 lib/Yote/DummyCache.pm
 lib/Yote/FileHelper.pm
 lib/Yote/Hash.pm
+lib/Yote/IO/Mongo.pm
+lib/Yote/IO/Mysql.pm
+lib/Yote/IO/SQLite.pm
 lib/Yote/Login.pm
 lib/Yote/Messenger.pm
-lib/Yote/MongoIO.pm
-lib/Yote/MysqlIO.pm
 lib/Yote/Obj.pm
 lib/Yote/ObjManager.pm
 lib/Yote/ObjProvider.pm
 lib/Yote/Sample/SecretCollect.pm
 lib/Yote/Sample/SimpleToDo.pm
 lib/Yote/SimpleLRUCache.pm
-lib/Yote/SQLiteIO.pm
 lib/Yote/Test/Hello.pm
 lib/Yote/Test/TestAppNeedsLogin.pm
 lib/Yote/Test/TestAppNoLogin.pm
